--- a/01_notebooks/00_EDA.ipynb
+++ b/01_notebooks/00_EDA.ipynb
@@ -825,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "babed75a",
+   "id": "1274e00e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b4184b71",
+   "id": "24dcf8b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38094feb",
+   "id": "e82ecec5",
    "metadata": {},
    "source": [
     "## Correlation plot"
@@ -1704,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "90676220",
+   "id": "b985ee81",
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d0aa496f",
+   "id": "778d46cf",
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5f20b0be",
+   "id": "b56aba4a",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
    "id": "b28d659f",
    "metadata": {},
    "source": [
-    "## Data Wrangling\n",
+    "## Feature Transformation\n",
     "\n",
     "- Convert the categorical featurs into small number of categories when possible"
    ]
