--- a/01_notebooks/TO_DELETE_02_predictive_modelling_2.ipynb
+++ b/01_notebooks/TO_DELETE_02_predictive_modelling_2.ipynb
@@ -245,7 +245,7 @@
    "id": "f9c57826",
    "metadata": {},
    "source": [
-    "## Data Imputation and Wrangling"
+    "## Data Imputation and Transformation"
    ]
   },
   {
@@ -937,115 +937,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6eec6adc",
-   "metadata": {},
-   "source": [
-    "## Deep learning models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "801508c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
-    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, GlobalMaxPool1D, BatchNormalization\n",
-    "from tensorflow.keras import backend as K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e473d737",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this piece of code copied from \n",
-    "#https://neptune.ai/blog/implementing-the-macro-f1-score-in-keras\n",
-    "def custom_f1(y_true, y_pred):    \n",
-    "    def recall_m(y_true, y_pred):\n",
-    "        TP = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
-    "        Positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
-    "        \n",
-    "        recall = TP / (Positives+K.epsilon())    \n",
-    "        return recall \n",
-    "    \n",
-    "    \n",
-    "    def precision_m(y_true, y_pred):\n",
-    "        TP = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
-    "        Pred_Positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
-    "    \n",
-    "        precision = TP / (Pred_Positives+K.epsilon())\n",
-    "        return precision \n",
-    "    \n",
-    "    precision, recall = precision_m(y_true, y_pred), recall_m(y_true, y_pred)\n",
-    "    \n",
-    "    return 2*((precision*recall)/(precision+recall+K.epsilon()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "710c258d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_model_dense(X_train, y_train):\n",
-    "    model = Sequential()\n",
-    "    model.add(Dense(1, input_shape=(X_train.shape[1],), activation='relu'))\n",
-    "    model.add(Dropout(0.25))\n",
-    "    model.add(Dense(1, activation='relu'))\n",
-    "    opt = Adam(learning_rate=0.001)\n",
-    "    model.compile(loss='binary_crossentropy',\n",
-    "                  optimizer=opt,\n",
-    "                  metrics=custom_f1)\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "664f883b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_dnn = make_model_dense(X_train1, y_train1)\n",
-    "model_dnn.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d23ff8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history_dnn = model_dnn.fit(X_train1, y_train1,\n",
-    "                            validation_data=(X_test1, y_test1),\n",
-    "                            epochs=20,\n",
-    "                            batch_size=32,\n",
-    "                            verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c45b9cc5",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(history_dnn.history['val_custom_f1'])\n",
-    "plt.plot(history_dnn.history['val_loss'])"
-   ]
   },
   {
    "cell_type": "markdown",
